gcc/testsuite/rust/rustc/ui/derives/clone-debug-dead-code-in-the-same-struct_dg.rs
#![forbid(dead_code)]

#[derive(Debug)]
pub struct Whatever {
    pub field0: (),
    field1: (), // { dg-error "" "" { target *-*-* } }
    field2: (),
    field3: (),
    field4: (),
}

fn main() {}

